--- a/src/component/event.css
+++ b/src/component/event.css
@@ -4,78 +4,83 @@
     padding: 0;
   }
 .Container{
-    background-color: rgb(250, 200, 238);
+    background: rgb(2,0,36);
+    background: linear-gradient(
+338deg
+, rgba(2,0,36,1) 0%, rgba(232,224,232,0.034518030845150593) 100%, rgb(193 184 184 / 2%) 100%);
     width: 100%;
     height: 100vh;
     display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Open Sans', sans-serif;
+font-family: 'Supermercado One', cursive;
 }
 .line_center{
-    width: 10px;
-    height: 98vh;
-    background-color: rgb(226, 191, 213);
+    width: 18px;
+    height: 89vh;
+    background-color: rgb(177 158 170);
     border-radius: 1rem;
     position: absolute;
-    border: 2px solid darkorange;
+    border: 4px solid #957599e6;
 }
 #disc0{
-    width: 20px;
-    height: 20px;
+    width: 32px;
+    height: 32px;
     border-radius: 3rem; 
     background-color: rgb(255, 255, 255);
     position: absolute;
     top: 71px;
-    border: 2px solid darkorange;
+    border: 5px solid #74535ae6;
     justify-content: center;
-    left: -6px;
+    left: -10px;
 }
 #disc1{
-    width: 20px;
-    height: 20px;
-    border-radius: 3rem; 
+    width: 32px;
+    height: 32px;
+    border-radius: 3rem;
     background-color: rgb(255, 255, 255);
     position: absolute;
     top: 171px;
-    border: 2px solid darkorange;
+    border: 5px solid #74535ae6;
     justify-content: center;
-    left: -6px;
+    left: -10px;
 
 }
 #disc2{
-    width: 20px;
-    height: 20px;
+    width: 32px;
+    height: 32px;
     border-radius: 3rem; 
     background-color: rgb(255, 255, 255);
     position: absolute;
-    top: 270px;
-    border: 2px solid darkorange;
+    top: 278px;
+    border: 5px solid #74535ae6;
     justify-content: center;
-    left: -6px;
+    left: -10px;
 
 }
 #disc3{
-    width: 20px;
-    height: 20px;
+    width: 32px;
+    height: 32px;
     border-radius: 3rem; 
     background-color: rgb(255, 255, 255);
     position: absolute;
-    top: 368px;
-    border: 2px solid darkorange;
+    top: 381px;
+    border: 5px solid #74535ae6;
     justify-content: center;
-    left: -6px;
+    left: -10px;
 
 }
 #disc4{
-    width: 20px;
-    height: 20px;
+    width: 32px;
+    height: 32px;
     border-radius: 3rem; 
     background-color: rgb(255, 255, 255);
     position: absolute;
     top: 469px;
-    border: 2px solid darkorange;
+    border: 5px solid #74535ae6;
     justify-content: center;
-    left: -6px;
+    left: -10px;
 }
 
 
@@ -100,37 +105,40 @@
 
 
 .messageBoxLeft{
-    width: 300px;
-    height: 100px;
+    width: 347px;
+    height: 107px;
     border-radius: 3rem; 
-    background-color: rgb(128, 122, 122);
+    background-color: rgb(242 229 229);
     position: relative;
     /* top: 71px; */
     margin-left: 26px;
-    border: 2px solid darkorange;
+    border: 8px solid #957599e6;
     justify-content: center;
     left: 12px;
     color:black;
     float: left;
     /* top: -35px; */
+    text-shadow: 5px 0px #f6f3f3;
+    font-size: 17px;
 }
 .messageBoxRight{
-    width: 300px;
-    height: 100px;
-    border-radius: 3rem; 
-    background-color: rgb(128, 122, 122);
+    width: 347px;
+    height: 107px;
+    border-radius: 3rem;
+    background-color: rgb(242 229 229);
     position: relative;
-    /* top: 71px; */
-    border: 2px solid darkorange;
+    border: 8px solid #957599e6;
     justify-content: center;
-    /* left: 30px; */
-    color:black;
+    color: black;
     margin-right: 26px;
     float: right;
+    text-shadow: 5px 0px #f6f3f3;
+    font-size: 17px;
 }
 .Messsage_Title{
     padding: 10px 12px 2px 18px;
     float: left;
+    
 }
 .Message_Time{
     background-color: white;
@@ -138,30 +146,280 @@
     height: 1.5rem;
     float: left;
     margin: 09px 20px;
-    border-radius: 3rem; 
+    border-radius: 3rem; border: 1px solid green;
+    text-shadow: 2px 2px #ead6d6;
 }
 .wrap{
     display: flex;
     justify-content: space-between;
 }
 @media only screen and (max-width: 800px) and (min-width: 275px) {
-    .messageBoxRight {
-        left:-227px;
-        width: 200px;
-        height: 80px;
-        font-size: 10px;
+    
+     .messageBoxRight {
+      width: 264px;
+    height: 88px;
+    border-radius: 3rem;
+    background-color: rgb(242 229 229);
+    position: relative;
+    border: 4px solid #957599e6;
+    justify-content: center;
+    color: black;
+    margin-right: 23px;
+    float: right;
+    text-shadow: 5px 0px #f6f3f3;
+    font-size: 13px;
     }
+    
     .messageBoxLeft {
-        left:30;
-        width: 200px;
-        font-size: 10px;
-        height: 80px;
+        width: 264px;
+    height: 88px;
+    border-radius: 3rem;
+    background-color: rgb(242 229 229);
+    position: relative;
+    border: 4px solid #957599e6;
+    justify-content: center;
+    color: black;
+    margin-right: 36px;
+    float: right;
+    text-shadow: 5px 0px #f6f3f3;
+    font-size: 13px;
     }
-    .Message_Time{
-        width: 3.5rem;
-        height: 1rem;
+    #disc0 {
+        width: 25px;
+        height: 25px;
+        border-radius: 2rem;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        top: 58px;
+        border: 5px solid #74535ae6;
+        justify-content: center;
+        left: -7px;
     }
-    .Messsage_Title{
-        padding: 6px 8px 0px 12px;
+    #disc1 {
+        width: 25px;
+        height: 25px;
+        border-radius: 2rem;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        top: 145px;
+        border: 5px solid #74535ae6;
+        justify-content: center;
+        left: -7px;
+    }
+    #disc2 {
+        width: 25px;
+        height: 25px;
+        border-radius: 2rem;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        top: 237px;
+        border: 5px solid #74535ae6;
+        justify-content: center;
+        left: -7px;
+    }
+    #disc3 {
+        width: 25px;
+        height: 25px;
+        border-radius: 2rem;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        top: 325px;
+        border: 5px solid #74535ae6;
+        justify-content: center;
+        left: -7px;
     }
   }
+
+@media only screen and (max-width: 800px) and (min-width: 275px) {
+    
+     .messageBoxRight {
+      width: 264px;
+    height: 88px;
+    border-radius: 3rem;
+    background-color: rgb(242 229 229);
+    position: relative;
+    border: 4px solid #957599e6;
+    justify-content: center;
+    color: black;
+    margin-right: 23px;
+    float: right;
+    text-shadow: 5px 0px #f6f3f3;
+    font-size: 13px;
+    }
+    
+    .messageBoxLeft {
+        width: 264px;
+    height: 88px;
+    border-radius: 3rem;
+    background-color: rgb(242 229 229);
+    position: relative;
+    border: 4px solid #957599e6;
+    justify-content: center;
+    color: black;
+    margin-right: 36px;
+    float: right;
+    text-shadow: 5px 0px #f6f3f3;
+    font-size: 13px;
+    }
+    #disc0 {
+        width: 25px;
+        height: 25px;
+        border-radius: 2rem;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        top: 58px;
+        border: 5px solid #74535ae6;
+        justify-content: center;
+        left: -7px;
+    }
+    #disc1 {
+        width: 25px;
+        height: 25px;
+        border-radius: 2rem;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        top: 145px;
+        border: 5px solid #74535ae6;
+        justify-content: center;
+        left: -7px;
+    }
+    #disc2 {
+        width: 25px;
+        height: 25px;
+        border-radius: 2rem;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        top: 237px;
+        border: 5px solid #74535ae6;
+        justify-content: center;
+        left: -7px;
+    }
+    #disc3 {
+        width: 25px;
+        height: 25px;
+        border-radius: 2rem;
+        background-color: rgb(255, 255, 255);
+        position: absolute;
+        top: 325px;
+        border: 5px solid #74535ae6;
+        justify-content: center;
+        left: -7px;
+    }
+  }
+  @media only screen and (max-width: 740px) and (min-width: 360px) {
+    .line_center {
+        height: 57vh;
+    } .messageBoxLeft{
+        font-size: 13px;
+        width: 260px;height: 88px;
+    }.messageBoxRight{
+        width: 260px;
+        font-size: 13px;height: 88px;
+    }.Messsage_Title {
+        padding: 4px 12px 2px 18px;
+        float: left;
+    }
+  } 
+  @media only screen and (max-width: 667px) and (min-width: 375px) {
+    .line_center {
+        height: 63vh;
+    }
+    .messageBoxLeft{
+        width: 260px;
+        font-size: 13px;height: 88px;
+    }.messageBoxRight{
+        width: 260px;
+        font-size: 13px;height: 88px;
+    }.Messsage_Title {
+        padding: 4px 12px 2px 18px;
+        float: left;
+    }
+  }
+  @media only screen and (max-width: 844px) and (min-width: 390px) {
+    .line_center {
+        height: 51vh;
+    }.messageBoxLeft{
+        width: 260px;
+        font-size: 13px;height: 88px;
+    }.messageBoxRight{
+        width: 260px;
+        font-size: 13px;height: 88px;
+    }.Messsage_Title {
+        padding: 4px 12px 2px 18px;
+        float: left;
+    }
+  }
+   
+  @media only screen and (max-width: 995px) and (min-width: 412px) {
+    .line_center {
+        height: 46vh;
+    }.messageBoxLeft{
+        width: 260px;
+        font-size: 13px;height: 88px;
+    }.messageBoxRight{
+        width: 260px;
+        font-size: 13px;height: 88px;
+    }.Messsage_Title {
+        padding: 4px 12px 2px 18px;
+        float: left;
+    }
+  }
+  @media only screen and (max-width: 896px) and (min-width: 414px) {
+    .line_center {
+        height: 46vh;
+    }.messageBoxLeft{
+        width: 260px;
+        font-size: 13px;height: 88px;
+    }
+    .messageBoxRight{
+        width: 260px;
+        font-size: 13px;height: 88px;
+    }.Messsage_Title {
+        padding: 4px 12px 2px 18px;
+        float: left;
+    }
+  }
+/*  
+  @media only screen and (max-width: 720px) and (min-width: 540px) {
+    .line_center {
+        width: 18px;
+        height: 58vh;
+        background-color: rgb(177 158 170);
+        border-radius: 1rem;
+        position: absolute;
+        border: 4px solid #957599e6;
+    }
+  }
+  @media only screen and (max-width: 1024px) and (min-width: 600px) {
+    .line_center {
+        width: 18px;
+        height: 84vh;
+        background-color: rgb(177 158 170);
+        border-radius: 1rem;
+        position: absolute;
+        border: 4px solid #957599e6;
+    }
+  }
+  @media only screen and (max-width: 1300px) and (min-width: 768px) {
+    .line_center {
+        width: 18px;
+        height: 49vh;
+        background-color: rgb(177 158 170);
+        border-radius: 1rem;
+        position: absolute;
+        border: 4px solid #957599e6;
+    }
+  } */
+  .Message_Time {
+    background-color: white;
+    width: 5.5rem;
+    height: 1.5rem;
+    float: left;
+    margin: 9px 20px;
+    border-radius: 3rem;
+    border: 1px solid green;
+    text-shadow: 2px 2px #ead6d6;
+    padding-top: 3px;
+  }
+  
+  
